00-master-node/09-arcadia-finance-app/00-arcadia-namespace.yaml

#---arcadia-namespace----
apiVersion: v1
kind: Namespace
metadata:
  name: arcadia
