00-master-node/09-arcadia-finance-app/03-arcadia-app2.yaml
#---arcadia-app2---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: arcadia
  labels:
    app: app2
spec:
  type: NodePort
  ports:
    - name: app2-80
      nodePort: 30362
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: arcadia
  labels:
    app: app2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
      version: v1
  template:
    metadata:
      labels:
        app: app2
        version: v1
    spec:
      containers:
        - name: app2
          image: registry.gitlab.com/arcadia-application/app2/app2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
