00-master-node/09-arcadia-finance-app/04-arcadia-app3.yaml
#---arcadia-app3---

apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: arcadia
  labels:
    app: app3
spec:
  type: NodePort
  ports:
    - name: app3-80
      nodePort: 31662
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: arcadia
  labels:
    app: app3
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
      version: v1
  template:
    metadata:
      labels:
        app: app3
        version: v1
    spec:
      containers:
        - name: app3
          image: registry.gitlab.com/arcadia-application/app3/app3:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
